fixing the alignment of repo items

--- a/src/styles/repository.css
+++ b/src/styles/repository.css
@@ -198,7 +198,9 @@
         padding: 20px 15px;
     }
     .repository-container{
+        overflow-y: auto;
         width: 100%;
+        max-height: 100vh;
         max-width: 440px;
     }
     .repository-title{
